vlib/v/checker/tests/array_insert_type_mismatch_d.vv
fn main() {
	mut a := [1, 2]
	a.insert(1, ['aa', 'bb', 'cc'])
	println(a)
}
